css color and hello world 3

--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
+<html>
+    <head>
+    <link href="PageStyles.css" rel="stylesheet" media="all">
 
-Hello World
+    </head>
 
-Hello World 2
+    <body>
+<h1>Heloo world</h1> 
+
+<h2>Hello World 2</h2>
+
+<h3>Hello world 3</h3>
+
+    </body>
+
+
+
+</html>
